@@ -215,6 +215,7 @@ Chronological list of authors
   - Josh Vermaas
   - Xiaoxu Ruan
   - Egor Marin
+  - Shaivi Malik
 
 External code
 -------------
