@@ -1718,8 +1718,8 @@ class Masses(AtomAttr):
         else:
             recenteredpos = atomgroup.positions - com
 
-        rog_sq = np.sum(masses * np.sum(recenteredpos**2,
-                                        axis=1)) / atomgroup.total_mass()
+        rog_sq = np.einsum('i,i->',masses,np.einsum('ij,ij->i',
+                                     recenteredpos,recenteredpos))/atomgroup.total_mass()
 
         return np.sqrt(rog_sq)
 
@@ -2232,8 +2232,8 @@ class Charges(AtomAttr):
                 ) - ref)
             else:
                 recenteredpos = (atomgroup.positions - ref)
-            dipole_vector = np.sum(recenteredpos * charges[:, np.newaxis],
-                                   axis=0)
+            dipole_vector = np.einsum('ij,ij->j',recenteredpos, 
+                                       charges[:, np.newaxis])
         else:
             (atom_masks, compound_masks,
              n_compounds) = atomgroup._split_by_compound_indices(compound)
@@ -2248,10 +2248,10 @@ class Charges(AtomAttr):
 
             dipole_vector = np.empty((n_compounds, 3), dtype=np.float64)
             for compound_mask, atom_mask in zip(compound_masks, atom_masks):
-                dipole_vector[compound_mask] = np.sum(
-                    (coords[atom_mask] - ref[compound_mask][:, None, :]) *
-                    chgs[atom_mask][:, :, None],
-                    axis=1)
+                dipole_vector[compound_mask] = np.einsum('ijk,ijk->ik',
+                                                          (coords[atom_mask]-
+                                                           ref[compound_mask][:, None, :]),
+                                                          chgs[atom_mask][:, :, None])
 
         return dipole_vector
 
@@ -2315,9 +2315,9 @@ class Charges(AtomAttr):
         dipole_vector = atomgroup.dipole_vector(**kwargs)
 
         if len(dipole_vector.shape) > 1:
-            dipole_moment = np.sqrt(np.sum(dipole_vector**2, axis=1))
+            dipole_moment = np.sqrt(np.einsum('ij,ij->i',dipole_vector,dipole_vector))
         else:
-            dipole_moment = np.sqrt(np.sum(dipole_vector**2))
+            dipole_moment = np.sqrt(np.einsum('i,i->',dipole_vector,dipole_vector))
 
         return dipole_moment
 
